[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/ButtonStyle.png" type="Texture" id=1]
[ext_resource path="res://Menu/Tema.tres" type="Theme" id=2]
[ext_resource path="res://pause.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1024, 1024 )
margin_left = 40.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1024, 1024 )
margin_left = 40.0
modulate_color = Color( 0.494118, 0.494118, 0.494118, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1024, 1024 )
margin_left = 40.0
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=4]
content_margin_left = 40.0

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
light_mask = 2
anchor_left = 0.062
anchor_top = 0.333
anchor_right = 0.276
anchor_bottom = 0.42
margin_left = 0.511993
margin_top = 0.200012
margin_right = 0.375977
margin_bottom = -4.57764e-05
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "RESUME"
align = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RestartButton" type="Button" parent="."]
light_mask = 2
anchor_left = 0.062
anchor_top = 0.467
anchor_right = 0.276
anchor_bottom = 0.553
margin_left = 0.511997
margin_top = -0.200012
margin_right = 0.375946
margin_bottom = 0.199921
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "RESTART"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="MenuButton" type="Button" parent="."]
light_mask = 2
anchor_left = 0.062
anchor_top = 0.6
anchor_right = 0.276
anchor_bottom = 0.687
margin_left = 0.511997
margin_top = 3.05176e-05
margin_right = 0.375946
margin_bottom = -0.200043
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "MAIN MENU"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
light_mask = 2
anchor_left = 0.062
anchor_top = 0.167
anchor_right = 0.276
anchor_bottom = 0.253
margin_left = 0.511997
margin_top = -0.199997
margin_right = 0.375946
margin_bottom = 0.199951
mouse_filter = 0
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )
text = "PAUSED"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
